Restore content on all pages: USP blocks, sub-links, epikoinonia/erga/stockhouse

--- a/src/epikoinonia/index.njk
+++ b/src/epikoinonia/index.njk
@@ -23,5 +23,6 @@ breadcrumbs:
     <div class="column bbl"><br/><p class="centroio nname lllb">info&#64;pvcoutlet.gr / business&#64;pvcoutlet.gr</p><br/><p class="centroio wwt">Στείλτε email με φωτογραφίες και διαστάσεις για προσφορά εντός 24 ωρών.</p></div>
   </div>
   <p class="basii">Ώρες λειτουργίας: Δευτέρα – Σάββατο 09:00 – 17:00. Πανελλαδική παράδοση και τοποθέτηση κουφωμάτων pvc, ρολών και σιτών.</p>
+  <p class="basii">📍 <strong>Κάντε κλικ για χάρτη</strong> – {{ site.address }}, {{ site.locality }} {{ site.postalCode }}. Καλέστε μας για προσφορά: <a href="tel:00302117259236">{{ site.phoneDisplay }}</a>.</p>
   <div class="sepp"></div>
 </div>
