--- a/src/erga-pelaton/index.njk
+++ b/src/erga-pelaton/index.njk
@@ -12,6 +12,8 @@ breadcrumbs:
 {% include "hero.njk" %}
 <div class="containerpvc">
   <br/>
-  <p class="basii">Οι πελάτες μας βρήκαν τα κουφώματα που τους ταιριάζουν. Δείτε τις <a href="/">κριτικές και τις εγκαταστάσεις</a>. Για προσφορά: <a href="/epikoinonia/">επικοινωνία</a> ή {{ site.phoneDisplay }}.</p>
+  <h2 class="titlos2">Έργα πελατών</h2>
+  <p class="basii">Οι πελάτες μας βρήκαν τα κουφώματα που τους ταιριάζουν. Στην <a href="/">αρχική σελίδα</a> θα βρείτε <strong>κριτικές και φωτογραφίες από εγκαταστάσεις</strong> παράθυρων pvc, μπαλκονόπορτων, ρολών και σιτών σε Καλλιθέα, Χαλάνδρι, Άλιμο, γραφεία και κατοικίες σε όλη την Ελλάδα.</p>
+  <p class="basii">Για προσφορά ή να δείτε περισσότερα έργα: <a href="/epikoinonia/">επικοινωνία</a> ή τηλέφωνο <a href="tel:00302117259236">{{ site.phoneDisplay }}</a>.</p>
   <div class="sepp"></div>
 </div>
