--- a/src/pvc-patzouria/index.njk
+++ b/src/pvc-patzouria/index.njk
@@ -17,10 +17,18 @@ offerPrice: 50
 {% include "hero.njk" %}
 <div class="containerpvc">
   <br/>
+  <h2 class="intro"><strong>ΠΑΝΤΖΟΥΡΙΑ PVC ΜΕ 12 ΑΤΟΚΕΣ ΔΟΣΕΙΣ</strong><br/><br/>Ανοιγόμενα και συρόμενα συνθετικά πατζούρια pvc από 50€. Χαμηλές τιμές, ασφάλεια και παραδοσιακό στυλ.</h2>
+  <br/>
+  <div class="row">
+    <div class="column bbl"><br/><img src="/img/guarantee.svg" class="sssvv" alt="Εγγύηση" width="50" height="50" loading="lazy"><p class="centroio nname lllb">12 ΧΡΟΝΙΑ ΕΓΓΥΗΣΗ</p><br/><p class="centroio wwt">Τα <span class="nname">πατζούρια pvc</span> της PVCOUTLET® πληρούν τα πρότυπα. Σε περίπτωση ελαττώματος αναλαμβάνουμε την επιδιόρθωση <span class="nname">εντελώς δωρεάν</span>.</p></div>
+    <div class="column bbl"><br/><img src="/img/savings.svg" class="sssvv" alt="Εξοικονόμηση" width="50" height="50" loading="lazy"><p class="centroio nname lllb">ΕΞΟΙΚΟΝΟΜΙΣΗ ΚΑΤ' ΟΙΚΟΝ</p><br/><p class="centroio wwt">Ανακαινίστε με ώφελος από το πρόγραμμα <a style="color:#00afed" href="https://exoikonomisi.ypen.gr/" target="_blank" rel="noopener noreferrer">«Εξοικονόμηση κατ΄ Οίκον ΙΙ»</a>.</p></div>
+    <div class="column bbl"><br/><img src="/img/transfer.svg" class="sssvv" alt="Παράδοση" width="50" height="50" loading="lazy"><p class="centroio nname lllb">ΠΑΝΕΛΛΑΔΙΚΗ ΠΑΡΑΔΟΣΗ</p><br/><p class="centroio wwt">Παραδίδουμε και εγκαθιστούμε πατζούρια και κουφώματα <span class="nname">σε όλη την Ελλάδα</span>.</p></div>
+  </div>
+  <br/>
   <h2 class="titlos2">Πατζούρια PVC</h2>
   <p class="basii">Ανοιγόμενα και συρόμενα <strong>συνθετικά πατζούρια pvc</strong> που συνδιάζουν χαμηλές τιμές, ασφάλεια και παραδοσιακό στυλ. Για παράθυρα και μπαλκονόπορτες.</p>
   <div class="row">
-    <div class="column">{% image "img/patzouria-pvcoutlet.webp", "Πατζούρια pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="παντζούρια pvc" href="/pvc-patzouria/">Πατζούρια PVC</a></h3><p>Συνθετικά πατζούρια pvc για παράθυρα και μπαλκονόπορτες.</p></div></div>
+    <div class="column">{% image "img/patzouria-pvcoutlet.webp", "Πατζούρια pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="παντζούρια pvc" href="/pvc-patzouria/">Πατζούρια PVC</a></h3><p>Συνθετικά πατζούρια pvc για παράθυρα και μπαλκονόπορτες.</p></div><div class="pvcdesc"><a class="hed4" title="Πατζούρια pvc για παράθυρα" href="/pvc-patzouria/">Πατζούρια pvc για παράθυρα</a><a class="hed4" title="Πατζούρια PVC για μπαλκονόπορτες" href="/pvc-patzouria/">Πατζούρια PVC για μπαλκονόπορτες</a><a class="hed4" title="Πατζούρια PVC συρόμενα" href="/pvc-patzouria/">Πατζούρια PVC συρόμενα</a></div></div>
   </div>
   <p class="basii">Προσφορά <strong>πατζουριών pvc</strong>: <a href="tel:00302117259236">{{ site.phoneDisplay }}</a> ή <a href="/epikoinonia/">επικοινωνία</a>.</p>
   <div class="sepp"></div>
