--- a/src/pvc-rola/index.njk
+++ b/src/pvc-rola/index.njk
@@ -15,10 +15,18 @@ breadcrumbs:
 {% include "hero.njk" %}
 <div class="containerpvc">
   <br/>
+  <h2 class="intro"><strong>ΡΟΛΑ PVC ΜΕ 12 ΑΤΟΚΕΣ ΔΟΣΕΙΣ</strong><br/><br/>Συνθετικά ρολά pvc ηλεκτρικά και χειροκίνητα στις χαμηλότερες τιμές. Εύκολη τοποθέτηση, υψηλή αισθητική και εγγύηση καλής λειτουργίας.</h2>
+  <br/>
+  <div class="row">
+    <div class="column bbl"><br/><img src="/img/guarantee.svg" class="sssvv" alt="Εγγύηση" width="50" height="50" loading="lazy"><p class="centroio nname lllb">12 ΧΡΟΝΙΑ ΕΓΓΥΗΣΗ</p><br/><p class="centroio wwt">Τα <span class="nname">ρολά pvc</span> της PVCOUTLET® πληρούν τα πρότυπα. Σε περίπτωση ελαττώματος αναλαμβάνουμε την επιδιόρθωση <span class="nname">εντελώς δωρεάν</span>.</p></div>
+    <div class="column bbl"><br/><img src="/img/savings.svg" class="sssvv" alt="Εξοικονόμηση" width="50" height="50" loading="lazy"><p class="centroio nname lllb">ΕΞΟΙΚΟΝΟΜΙΣΗ ΚΑΤ' ΟΙΚΟΝ</p><br/><p class="centroio wwt">Ανακαινίστε με ώφελος από το πρόγραμμα <a style="color:#00afed" href="https://exoikonomisi.ypen.gr/" target="_blank" rel="noopener noreferrer">«Εξοικονόμηση κατ΄ Οίκον ΙΙ»</a>.</p></div>
+    <div class="column bbl"><br/><img src="/img/transfer.svg" class="sssvv" alt="Παράδοση" width="50" height="50" loading="lazy"><p class="centroio nname lllb">ΠΑΝΕΛΛΑΔΙΚΗ ΠΑΡΑΔΟΣΗ</p><br/><p class="centroio wwt">Παραδίδουμε και εγκαθιστούμε ρολά και κουφώματα <span class="nname">σε όλη την Ελλάδα</span>.</p></div>
+  </div>
+  <br/>
   <h2 class="titlos2">Ρολά PVC</h2>
   <p class="basii">Συνθετικά <strong>ρολά pvc</strong> με ηλεκτρικό μοτέρ ή ιμάντα στις καλύτερες τιμές. Εύκολη τοποθέτηση, υψηλή αισθητική και εγγύηση καλής λειτουργίας. Κατάλληλα για παράθυρα και μπαλκονόπορτες.</p>
   <div class="row">
-    <div class="column">{% image "img/rola-asfalias-pvcoutlet.webp", "Ρολά pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="Ρολά pvc" href="/pvc-rola/">Συνθετικά Ρολά PVC</a></h3><p>Ηλεκτρικά και χειροκίνητα ρολά για κουφώματα.</p></div></div>
+    <div class="column">{% image "img/rola-asfalias-pvcoutlet.webp", "Ρολά pvc", 400, 300, "", "lazy" %}<div class="pvch2 miko"><h3><a title="Ρολά pvc" href="/pvc-rola/">Συνθετικά Ρολά PVC</a></h3><p>Ηλεκτρικά και χειροκίνητα ρολά για κουφώματα. Εύκολη τοποθέτηση, υψηλή αισθητική.</p></div><div class="pvcdesc"><a class="hed4" title="Ηλεκτρικά ρολά pvc" href="/pvc-rola/">Ηλεκτρικά ρολά pvc</a><a class="hed4" title="Χειροκίνητα ρολά pvc" href="/pvc-rola/">Χειροκίνητα ρολά pvc</a><a class="hed4" title="Ρολά βαρέως τύπου" href="/pvc-rola/">Ρολά βαρέως τύπου</a></div></div>
   </div>
   <p class="basii">Προσφορά <strong>ρολών pvc</strong>: <a href="tel:00302117259236">{{ site.phoneDisplay }}</a> ή <a href="/epikoinonia/">επικοινωνία</a>.</p>
   <div class="sepp"></div>
