--- a/src/pvc-stockhouse/index.njk
+++ b/src/pvc-stockhouse/index.njk
@@ -12,6 +12,8 @@ breadcrumbs:
 {% include "hero.njk" %}
 <div class="containerpvc">
   <br/>
-  <p class="basii">Επικοινωνήστε μαζί μας για πληροφορίες και προσφορά. <a href="/epikoinonia/">Φόρμα επικοινωνίας</a> ή τηλέφωνο {{ site.phoneDisplay }}.</p>
+  <h2 class="titlos2">PVC Stockhouse</h2>
+  <p class="basii"><strong>PVC Stockhouse</strong> – ετοιμοπαράδοτα κουφώματα pvc σε τιμές χονδρικής. Παράθυρα pvc, μπαλκονόπορτες, πόρτες, ρολά και σίτες στις καλύτερες τιμές της αγοράς. Πανελλαδική παράδοση και τοποθέτηση.</p>
+  <p class="basii">Για πληροφορίες και προσφορά: <a href="/epikoinonia/">φόρμα επικοινωνίας</a> ή τηλέφωνο <a href="tel:00302117259236">{{ site.phoneDisplay }}</a>. Διαθέτουμε και <a href="/">μεταχειρισμένα κουφώματα</a> και ειδικές προσφορές.</p>
   <div class="sepp"></div>
 </div>
