--- a/src/sites/index.njk
+++ b/src/sites/index.njk
@@ -17,10 +17,18 @@ offerPrice: 100
 {% include "hero.njk" %}
 <div class="containerpvc">
   <br/>
+  <h2 class="intro"><strong>ΣΙΤΕΣ ΠΑΡΑΘΥΡΩΝ & ΠΟΡΤΩΝ ΑΠΟ €100</strong><br/><br/>6 είδη σίτας κατάλληλα για όλους τους τύπους κουφωμάτων. Πλισέ, ανοιγόμενες, κάθετης κίνησης. Ρωτήστε μας για να σας προτείνουμε τις σίτες που σας ταιριάζουν.</h2>
+  <br/>
+  <div class="row">
+    <div class="column bbl"><br/><img src="/img/guarantee.svg" class="sssvv" alt="Εγγύηση" width="50" height="50" loading="lazy"><p class="centroio nname lllb">12 ΧΡΟΝΙΑ ΕΓΓΥΗΣΗ</p><br/><p class="centroio wwt">Τα <span class="nname">κουφώματα και σίτες</span> της PVCOUTLET® πληρούν τα πρότυπα. Σε περίπτωση ελαττώματος αναλαμβάνουμε την επιδιόρθωση <span class="nname">εντελώς δωρεάν</span>.</p></div>
+    <div class="column bbl"><br/><img src="/img/savings.svg" class="sssvv" alt="Εξοικονόμηση" width="50" height="50" loading="lazy"><p class="centroio nname lllb">ΕΞΟΙΚΟΝΟΜΙΣΗ ΚΑΤ' ΟΙΚΟΝ</p><br/><p class="centroio wwt">Ανακαινίστε με ώφελος από το πρόγραμμα <a style="color:#00afed" href="https://exoikonomisi.ypen.gr/" target="_blank" rel="noopener noreferrer">«Εξοικονόμηση κατ΄ Οίκον ΙΙ»</a>.</p></div>
+    <div class="column bbl"><br/><img src="/img/transfer.svg" class="sssvv" alt="Παράδοση" width="50" height="50" loading="lazy"><p class="centroio nname lllb">ΠΑΝΕΛΛΑΔΙΚΗ ΠΑΡΑΔΟΣΗ</p><br/><p class="centroio wwt">Παραδίδουμε και εγκαθιστούμε σίτες και κουφώματα <span class="nname">σε όλη την Ελλάδα</span>.</p></div>
+  </div>
+  <br/>
   <h2 class="titlos2">Σίτες</h2>
   <p class="basii">6 είδη <strong>σίτας</strong> κατάλληλα για όλους τους τύπους κουφωμάτων: πλισέ, ανοιγόμενες, κάθετης κίνησης. Ρωτήστε μας για να σας προτείνουμε τις σίτες που σας ταιριάζουν.</p>
   <div class="row">
-    <div class="column">{% image "img/sites-pvcoutlet.webp", "Σίτες παραθύρων και μπαλκονόπορτας", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="Σίτες" href="/sites/">Σίτες παραθύρων & πορτών</a></h3><p>Σίτες πλισέ, ανοιγόμενες, κάθετες για παράθυρα και μπαλκονόπορτες.</p></div></div>
+    <div class="column">{% image "img/sites-pvcoutlet.webp", "Σίτες παραθύρων και μπαλκονόπορτας", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="Σίτες" href="/sites/">Σίτες παραθύρων & πορτών</a></h3><p>Σίτες πλισέ, ανοιγόμενες, κάθετες για παράθυρα και μπαλκονόπορτες.</p></div><div class="pvcdesc"><a class="hed4" title="Σίτες πλισέ" href="/sites/">Σίτες πλισέ</a><a class="hed4" title="Σίτες ανοιγόμενες" href="/sites/">Σίτες ανοιγόμενες</a><a class="hed4" title="Σίτες κάθετης κίνησης" href="/sites/">Σίτες κάθετης κίνησης</a></div></div>
   </div>
   <p class="basii">Προσφορά <strong>σιτών</strong>: <a href="tel:00302117259236">{{ site.phoneDisplay }}</a> ή <a href="/epikoinonia/">επικοινωνία</a>.</p>
   <div class="sepp"></div>
