Update parathira content and deploy

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -8,6 +8,7 @@
         <p>Τηλέφωνο</p>
         <p>Whatsapp</p>
         <p>Viber</p>
+        <p>Vodaphone cu</p>
         <p>Email</p>
         <p>Φόρμα Επικοινωνίας</p>
         <p>Για Επαγγελματίες B2B</p>
@@ -24,18 +25,21 @@
         <a title="pvc παντζούρια" href="{{ site.url }}/pvc-patzouria/">Pvc Παντζούρια</a>
         <a title="σίτες" href="{{ site.url }}/sites/">Σίτες Κουφωμάτων</a>
         <a title="pvc ρολά" href="{{ site.url }}/pvc-rola/">Pvc Ρολά</a>
+        <a title="PVC Stockhouse" href="{{ site.url }}/pvc-stockhouse/">PVC Stockhouse</a>
+        <a title="μεταχειρισμένα κουφώματα pvc" href="https://www.car.gr/xyma/4553/koyfwmata-portes-kagkela.html/?ca=4553" target="_blank" rel="noopener noreferrer">Μεταχειρισμένα κουφώματα</a>
         <a title="επικοινωνία" href="{{ site.url }}/epikoinonia/">Επικοινωνία</a>
       </div>
     </div>
     <div class="column">
       <div class="pvch2"><h3>Χρήσιμα Links</h3></div>
       <div class="pvcdesc">
-        <a title="PVC Stockhouse" href="{{ site.url }}/pvc-stockhouse/">PVC Stockhouse</a>
         <a title="Κουφώματα Ramplast" href="https://en.ramplast.ro/" target="_blank" rel="noopener noreferrer">Κουφώματα Ramplast</a>
         <a title="Κουφώματα Rehau" href="https://www.rehau.com/gr-el" target="_blank" rel="noopener noreferrer">Κουφώματα Rehau</a>
         <a title="Κουφώματα Koemmerling" href="https://www.koemmerling.gr/gr/" target="_blank" rel="noopener noreferrer">Κουφώματα Koemmerling</a>
-        <a title="Εξοικονόμηση κατ' οίκον ΙΙ" href="https://exoikonomisi.ypen.gr/" target="_blank" rel="noopener noreferrer">Εξοικονόμηση κατ' οίκον ΙΙ</a>
-        <a title="κατάλογος pvcoutlet" href="https://issuu.com/pvcoutlet-koufomata" target="_blank" rel="noopener noreferrer">Δείτε τον κατάλογο</a>
+        <a title="Εξοικονόμηση κατ' οίκον ΙΙ" href="https://exoikonomisi.ypen.gr/" target="_blank" rel="noopener noreferrer">«Εξοικονόμηση κατ' οίκον ΙΙ»</a>
+        <a title="Πανελλήνιος" href="https://www.panelinios.gr/company/193488/" target="_blank" rel="noopener noreferrer">Πανελλήνιος</a>
+        <a title="κατάλογος pvcoutlet" href="https://issuu.com/pvcoutlet-koufomata" target="_blank" rel="noopener noreferrer">Δείτε τον κατάλογο 2020</a>
+        <a title="Webwiki" href="https://www.webwiki.com/pvcoutlet.gr" target="_blank" rel="noopener noreferrer">Webwiki</a>
         <a title="Έργα πελατών" href="{{ site.url }}/erga-pelaton/">Έργα πελατών</a>
         <a title="Κουφώματα Wiki" href="https://el.wikipedia.org/wiki/Κουφώματα" target="_blank" rel="noopener noreferrer">Κουφώματα Wiki</a>
       </div>
@@ -44,10 +48,13 @@
       <div class="pvch2"><h3>Social Media</h3></div>
       <div class="pvcdesc">
         <a title="Facebook pvcoutlet" href="https://www.facebook.com/pvcoutlet" target="_blank" rel="noopener noreferrer">Facebook</a>
-        <a title="Instagram pvcoutlet" href="https://www.instagram.com/pvcoutlet" target="_blank" rel="noopener noreferrer">Instagram</a>
-        <a title="Youtube pvcoutlet" href="https://www.youtube.com/channel/UChbFoqc-zPmvKuhAbdKAiew" target="_blank" rel="noopener noreferrer">Youtube</a>
         <a title="Twitter pvcoutlet" href="https://twitter.com/pvcoutlet" target="_blank" rel="noopener noreferrer">Twitter</a>
+        <a title="Youtube pvcoutlet" href="https://www.youtube.com/channel/UChbFoqc-zPmvKuhAbdKAiew" target="_blank" rel="noopener noreferrer">Youtube</a>
+        <a title="Instagram pvcoutlet" href="https://www.instagram.com/pvcoutlet" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <a title="Πανελλήνιος" href="https://www.panelinios.gr/company/193488/" target="_blank" rel="noopener noreferrer">Πανελλήνιος</a>
         <a title="Pinterest pvcoutlet" href="https://www.pinterest.com/pvcoutlet" target="_blank" rel="noopener noreferrer">Pinterest</a>
+        <a title="webwiki" href="https://www.webwiki.com/pvcoutlet.gr" target="_blank" rel="noopener noreferrer">webwiki</a>
+        <a title="Linkedin" href="https://linkedin.com" target="_blank" rel="noopener noreferrer">Linkedin</a>
       </div>
     </div>
   </div>
@@ -55,11 +62,8 @@
 <div class="subfooter">
   <a href="{{ site.url }}/"><img alt="κουφώματα pvc {{ site.name }}" src="{{ site.url }}/img/pvcoutlet-logo.webp" width="200" height="40" loading="lazy"></a>
   <small>POWERED BY</small><br/>
-  <strong style="margin:10px;"><a href="https://technopan.gr/" title="ΤΕΧΝΟΠΑΝ κουφώματα PVC" target="_blank" rel="noopener noreferrer">ΤΕΧΝΟΠΑΝ</a></strong>
-  <p>Συνθετικά κουφώματα pvc, παράθυρα pvc, μπαλκονόπορτες pvc, ρολά και σίτες σε χαμηλές τιμές. Πανελλαδική παράδοση. Επικοινωνήστε για προσφορά.</p>
-  <nav class="internal-links" aria-label="Εσωτερικοί σύνδεσμοι">
-    {% for link in internalLinks %}
-    <a href="{{ site.url }}{{ link.url }}" title="{{ link.title }}">{{ link.label }}</a>{% if not loop.last %} · {% endif %}
-    {% endfor %}
-  </nav>
+  <strong style="margin:10px;"><a href="https://technopan.gr/" title="ΤΕΧΝΟΠΑΝ κουφώματα PVC" target="_blank" rel="noopener noreferrer">ΤΕΧΝΟΠΑΝ | Κουφώματα PVC που φροντίζουν για εσάς</a></strong>
+  <p>Συνθετικά κουφώματα pvc, παράθυρα pvc, πόρτες pvc, μπαλκονόπορτες pvc, ρολά και σίτες σε απίστευτα χαμηλές τιμές και την αμεσότερη παράδοση πανελλαδικώς! Επικοινωνήστε μαζί μας για να λάβετε προσφορά!</p>
+  <p><a href="https://upstairs.gr/" title="SEO digital marketing agency" target="_blank" rel="noopener noreferrer">SEARCH ENGINE OPTIMIZATION BY UPSTAIRS DIGITAL MARKETING AGENCY</a></p>
+  <p><a href="https://shortcode.gr" title="κατασκευή eshop" target="_blank" rel="noopener noreferrer">Shortcode Κατασκευή eshop</a> <a href="https://symbols.gr" title="δημιουργία ιστοσελίδων" target="_blank" rel="noopener noreferrer">+ Δημιουργία Ιστοσελιδων</a></p>
 </div>
