--- a/src/_includes/home-content.njk
+++ b/src/_includes/home-content.njk
@@ -90,8 +90,9 @@
 
   <a href="/epikoinonia/" title="παραδόσεις πανελλαδικά">{% image "img/paradosi-koufomat.jpg", "παραδόσεις πανελλαδικά", 720, 200, "diaff", "lazy" %}</a>
 
-  <p class="titlos2">PVC Ρολά, Πατζούρια & Σίτες</p>
-  <p class="basii">Επιλέξτε ανάμεσα σε παραδοσιακά <span class="nname">συνθετικά πατζούρια</span> και σε σύγχρονα <span class="nname">ρολά ασφαλείας</span>. Στην PVC OUTLET® θα βρείτε πατζούρια και ρολά ασφαλείας στις καλύτερες τιμές. Ενισχύστε τα κουφώματά σας με <strong>σίτες</strong> που ταιριάζουν στο κούφωμα και απολαύστε το καλοκαίρι προστατευόμενοι από κουνούπια.</p>
+  <p class="titlos2"> PVC Ρολά, Πατζούρια & Σίτες</p>
+  <p class="basii">Επιλέξτε ανάμεσα σε παραδοσιακά <span class="nname">συνθετικά παντοζούρα</span> και σε σύνχρονα <span class="nname">ρολά ασφαελείας</span> για να δώσετε έναν αέρα ομορφιάς και ασφάλειας στο χώρο σας. Στην PVC OUTLET® θα βρείτε παντζούρια και ρολά ασφαλείας στις καλύτρες τιμές της αγοράς και στην καλύτερη ποιότητα.</p>
+  <p class="basii">Ενισχύστε τα κουφώματά σας με τις σίτες που ταιριάζουν στο εκάστοτε κούφωμα και απολαύστε στο μέγιστο το καλοκαίρι, προστατευόμενο από κουνούπια και άλλα έντομα.</p>
   <div class="row">
     <div class="column">
       {% image "img/rola-asfalias-pvcoutlet.webp", "Ρολά pvc ηλεκτρικά και χειροκίνητα", 400, 300, "", "lazy" %}
