--- a/src/epikoinonia/index.njk
+++ b/src/epikoinonia/index.njk
@@ -15,14 +15,15 @@ breadcrumbs:
 {% include "hero.njk" %}
 <div class="containerpvc">
   <br/>
-  <h2 class="intro"><strong>ΚΑΛΕΣΤΕ ΜΑΣ ΓΙΑ ΠΡΟΣΦΟΡΑ</strong><br/><br/>Επικοινωνήστε τηλεφωνικά ή με email για άμεση προσφορά. Στείλτε φωτογραφίες και διαστάσεις και θα απαντήσουμε με κόστος αγοράς και τοποθέτησης.</h2>
+  <h2 class="intro"><strong>ΚΑΛΕΣΤΕ ΜΑΣ ΓΙΑ ΠΡΟΣΦΟΡΑ</strong><br/><br/>Επικοινωνήστε μαζί μας τηλεφωνικά ή με email για να σας δώσουμε άμεσα προσφορά. Μπορείτε να μας στείλετε στο email φωτογραφίες του χώρου και διαστάσεις και θα σας απαντήσουμε με το κόστος αγοράς και τοποθέτησης.</h2>
   <br/>
   <div class="row">
-    <div class="column bbl"><br/><img src="/img/phone.svg" class="sssvv" alt="Τηλέφωνο" width="50" height="50" loading="lazy"><p class="centroio nname lllb">{{ site.phoneDisplay }}</p><br/><p class="centroio wwt">Καλέστε για <span class="nname">τηλεφωνική προσφορά</span>.</p></div>
-    <div class="column bbl"><br/><p class="centroio nname lllb">{{ site.address }}, {{ site.locality }} {{ site.postalCode }}</p><br/><p class="centroio wwt">Ελάτε στο γραφείο για να δείτε την <span class="nname">ποιότητα των κουφωμάτων</span>.</p></div>
-    <div class="column bbl"><br/><p class="centroio nname lllb">info&#64;pvcoutlet.gr / business&#64;pvcoutlet.gr</p><br/><p class="centroio wwt">Στείλτε email με φωτογραφίες και διαστάσεις για προσφορά εντός 24 ωρών.</p></div>
+    <div class="column bbl"><br/><img src="/img/phone.svg" class="sssvv" alt="Τηλέφωνο" width="50" height="50" loading="lazy"><p class="centroio nname lllb">{{ site.phoneDisplay }}</p><br/><p class="centroio wwt">Καλέστε μας <span class="nname">για τηλεφωνική προσφορά</span> σε λίγα μόνο λεπτά. <span class="nname">Ένας εξειδικευμένος συνεργάτης μας θα απαντήσει σε όλα σας τα ερωτήματα.</span></p></div>
+    <div class="column bbl"><br/><img src="/img/pin.svg" class="sssvv" alt="Διεύθυνση" width="50" height="50" loading="lazy"><p class="centroio nname lllb">{{ site.address }} γ. Ιωάννης Ρέντης {{ site.postalCode }}</p><br/><p class="centroio wwt">Ελάτε απο το κεντρικό μας γραφείο για να δείτε από πρώτο χέρι την <span class="nname">ποιότητα των κουφωμάτων μας</span> και να συζητήσουμε για το πως μπορούμε να καλύψουμε τις ανάγκες σας.</p></div>
+    <div class="column bbl"><br/><img src="/img/email.svg" class="sssvv" alt="Email" width="50" height="50" loading="lazy"><p class="centroio nname lllb">info&#64;pvcoutlet.gr</p><br/><p class="centroio wwt">Στείλτε μας email <span class="nname">με τις φωτογραφίες και τις διαστάσεις</span> των κουφωμάτων που θέλετε και θα σας απαντήσουμε με προσφορά μέσα σε 24 ώρες. Συμπληρώστε τα στοιχεία σας για να σας καλέσουμε πίσω.</p></div>
   </div>
   <p class="basii">Ώρες λειτουργίας: Δευτέρα – Σάββατο 09:00 – 17:00. Πανελλαδική παράδοση και τοποθέτηση κουφωμάτων pvc, ρολών και σιτών.</p>
-  <p class="basii">📍 <strong>Κάντε κλικ για χάρτη</strong> – {{ site.address }}, {{ site.locality }} {{ site.postalCode }}. Καλέστε μας για προσφορά: <a href="tel:00302117259236">{{ site.phoneDisplay }}</a>.</p>
+  <p class="basii">📍 {{ site.address }}, {{ site.locality }} {{ site.postalCode }}. Καλέστε μας: <a href="tel:00302117259236">{{ site.phoneDisplay }}</a>.</p>
   <div class="sepp"></div>
 </div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d786.4857592777696!2d23.66827436690928!3d37.95511601273066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bc77dfce5fd9%3A0x1c377f52d2bd638e!2zzqfPgc-Fz4POv8-Dz4TPjM68zr_PhSDOo868z43Pgc69zrfPgiA3OCwgzpHOsy4gzpnPic6szr3Ovc63z4IgzqHOrc69z4TOt8-CIDE4NSA0MQ!5e0!3m2!1sel!2sgr!4v1612801051972!5m2!1sel!2sgr" width="100%" height="600" title="Χάρτης PVCOUTLET" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
