--- a/src/pvc-balkonoportes/index.njk
+++ b/src/pvc-balkonoportes/index.njk
@@ -32,6 +32,80 @@ offerPrice: 350
     <div class="column">{% image "img/balkonopora-pvc-pvcoutlet.webp", "Μπαλκονόπορτα pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="μπαλκονόπορτες pvc" href="/pvc-balkonoportes/">Μπαλκονόπορτες PVC</a></h3><p>Η πιο συμφέρουσα λύση: οικονομική τιμή με μέγιστη ηχομόνωση και θερμομόνωση.</p></div><div class="pvcdesc"><a class="hed4" title="Μονόφυλλες μπαλκονόπορτες pvc" href="/pvc-balkonoportes/">Μονόφυλλες μπαλκονόπορτες pvc</a><a class="hed4" title="Δίφυλλες μπαλκονόπορτες pvc" href="/pvc-balkonoportes/">Δίφυλλες μπαλκονόπορτες pvc</a><a class="hed4" title="Ειδικές κατασκευές pvc" href="/pvc-balkonoportes/">Ειδικές κατασκευές pvc</a></div></div>
     <div class="column">{% image "img/balkonoporta-pvc-kouzinas-pvcoutlet.webp", "Κουζινόπορτα pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="Κουζινόπορτες pvc" href="/pvc-balkonoportes/">Κουζινόπορτα PVC</a></h3><p>Οικονομική τιμή, μέγιστη ηχομόνωση και θερμομόνωση.</p></div><div class="pvcdesc"><a class="hed4" title="Μονόφυλλες κουζινόπορτες pvc" href="/pvc-balkonoportes/">Μονόφυλλες κουζινόπορτες pvc</a><a class="hed4" title="Δίφυλλες κουζινόπορτες pvc" href="/pvc-balkonoportes/">Δίφυλλες κουζινόπορτες pvc</a><a class="hed4" title="Ειδικές κατασκευές κουζινόπορτας pvc" href="/pvc-balkonoportes/">Ειδικές κατασκευές κουζινόπορτας pvc</a></div></div>
   </div>
+  <a href="/epikoinonia/" title="παραδόσεις κουφωματων πανελλαδικά">{% image "img/paradosi-koufomat.jpg", "παραδόσεις πανελλαδικά", 720, 200, "diaff", "lazy" %}</a>
+
+  <div class="containerpvc2">
+    <div class="containerpvc">
+      <br/>
+      <p class="titlos3 dddar">ΣΥΧΝΕΣ ΕΡΩΤΗΣΕΙΣ</p>
+      <p class="basii" style="color:white">Διαβάστε τις απαντήσεις στα πιο συνήθη ερωτήματα για τα <span class="nname">συνθετικά παράθυρα από pvc</span>. Μάθετε τα χαρακτηριστικά τους, τα πλεονεκτήματά τους και τις διαφορές τους από τους υπόλοιπους τύπους παραθύρων όπως τα ξύλινα και τα αλουμινένια.</p>
+      <div class="row">
+        <div class="smallcol pad30"><p class="nname">Τι είναι τα πλαστικά ή συνθετικά ενεργειακά κουφώματα pvc;</p>{% image "img/pvc-window-pvcoutlet.jpg", "τι είναι τα Pvc Κουφωματα", 400, 267, "m20marg", "lazy" %}<p>Συνθετικό κούφωμα pvc είναι όλα τα κουφώματα όπως παράθυρα, πόρτες και μπαλκονόπορτες που κατασκευάζονται από το συνθετικό υλικό pvc. Το PVC κατασκευάζεται από ένα είδος πλαστικού σε συνδιασμό με μίγμα pvc και abc τεχνολογία. Αυτό χαρίζει στα κουφώματα PVC ιδιαίτερα υψηλή θερμομονωτική και ηχομονωτική ικανότητα.</p></div>
+        <div class="smallcol pad30"><p class="nname">Γιατί οι τιμές των κουφωμάτων pvc είναι τόσο χαμηλές;</p>{% image "img/kitrinizoun-ta-pvc-koufomata.jpg", "pvc κουφωματα τιμεσ", 400, 267, "m20marg", "lazy" %}<p>Η τιμή των κουφωμάτων pvc στις μέρες μας είναι πολύ ανταγωνιστική σε σχέση με των κουφωμάτων απο αλουμίνιο ή απο ξύλο. Ενώ στο παρελθόν η τιμή τους ήταν μεγαλύτερη από αυτή των κουφωμάτων αλουμινίου, τα τελευταία χρόνο λόγω της ηψηλής ζήτησης αλλά και της συνεχώς αναπτυσσόμενης τεχνολογίας τους η τιμή των κουφωμάτων pvc έχει γίνει πολύ ανταγωνιστική.</p></div>
+        <div class="smallcol pad30"><p class="nname">Τι διαφορά έχουν τα κουφώματα pvc από του αλουμινίου;</p>{% image "img/koufomata-pvc.jpg", "κουφώματα pvc και αλουμινίου", 400, 267, "m20marg", "lazy" %}<p>Τα συνθετικά κουφώματα pvc σε σχέση με του αλουμινίου αρχικά έχουν διαφορά στο υλικό τους. Το αλουμίνιο σαν υλικό είναι ψυχρό και άγει τη θερμοκρασία. Για τον λόγο αυτό αν το ακουμπήσετε από το εσωετερικό του μια κρύα μέρα θα είναι κρύο. Αντίθετα τα συνθετικό pvc από τη φύση του δεν άγει τη θερμοκρασία και έτσι αν το αγγίξετε μια κρύα ημέρα δεν θα είναι πολύ κρύο.</p></div>
+      </div>
+      <div class="row">
+        <div class="smallcol pad30"><p class="nname">Είναι κατάλληλα κουφώματα για κατοικίες ή επαγγελματικούς χώρους;</p>{% image "img/koufomata-pvc-alouminiou.jpg", "κουφωματα Pvc τιμεσ", 400, 267, "m20marg", "lazy" %}<p>Τα συνθετικά κουφώματα PVC έχουν από τη φύση τους μειώνουν την ένταση των ήχων του περιβάλλοντος κατά 70%. Αυτό συμβαίνει λόγω του ότι το πλαστικό δεν επιτρέπει την μετάδοση του ήχου. Επίσης έχουν εξαιρετικές ενεργειακές επιδόσεις καθώς το pvc είναι μη αγώγιμο υλικό και δεν μεταφέρει τη θερμοκρασία. Μπορούν να εφαρμοστούν σε διαμερίσματα, σε κατοικίες αλλά και επαγγελματικούς χώρους.</p></div>
+        <div class="smallcol pad30"><p class="nname">Τι πλεονεκτήματα έχουν τα κουφώματα pvc σε σχέση με του αλουμινίου;</p>{% image "img/pvc-koufomata-igrasia.jpg", "pvc κουφωματα ή αλουμινίου", 400, 267, "m20marg", "lazy" %}<p>Τα κουφώματα αλουμινίου, συχνά συγκεντρώνουν υδρατμούς στο εσωτερικό τους και είναι καλοί αγωγοί της θερμοκρασίας. Αντίθετα, τα κουφώματα από συνθετικό pvc δεν άγουν τη θερμοκρασία και έτσι διατηρούν σταθερή θερμοκρασια στο εσωτερικό των χώρων. Όταν συνδιάζονται και με ενεργειακά τζάμια τεσσάρων εποχών, καταφέρνουν μέχρι και 74% καλύτερες ενεργειακές αποδόσεις.</p></div>
+        <div class="smallcol pad30"><p class="nname">Ποιές είναι οι βασικές μάρκες κουφωμάτων pvc στην Ελληνική αγορά;</p>{% image "img/pvc-koufomata-pvcoutlet.jpg", "τιμεσ κουφωματα pvc", 400, 267, "m20marg", "lazy" %}<p>Στην Ελληνική αγορά θα βρείτε μεγάλη ποικιλία σε μάρκες κουφωμάτων pvc παντός τύπου. Από τις πιο γνωστές μάρκες με την καλύτερη ποιότητα υλικών και προδιαγραφών αποτελούν η Rehau και η Ramplast. Άλλες μάρκες που θα βρείτε στο εμπόριο είναι η Koemmerling, η Aluplast, η ECOplam και η Rolloplast. Όλες τους παρέχουν υψιλής ποιότητας κουφώματα pvc, πόρτες, παράθυρα και μπαλκονόπορτες.</p></div>
+      </div>
+      <div class="row">
+        <div class="smallcol pad30"><p class="nname">Τι χρώματα μπορώ να επιλέξω στα pvc κουφώματα;</p>{% image "img/pvc-koufomata-colors.jpg", "κουφωματα pvc χρωματα", 400, 267, "m20marg", "lazy" %}<p>Τα συνθετικά Κουφώματα pvc έχουν πολύ μεγάλη γκάμα χρωμάτων από τα οποία μπορείτε να επιλέξετε. Υπάρχουν πάρα πολλές αποχρώσεις σε όλα σχεδον τα χρώματα που μπορεί να φανταστεί κανείς. Η ανάγλυφη υφή τους μπορεί να σας δυσκολέψει πολύ να αναγνωρίσετε τα αληθινά από τα ξύλινου χρώματος κουφώματα pvc. Το πιο συνηθισμένο χρώμα είναι το λευκό και το γκρί. Αυτά τα χρώματα συνδιάζονται εύκολα με τα υπόλοιπα και αποτελούν μια ιδανική λύση η οποία ταιριάζει σε όλους τους χώρους. Τα περισσότερα χρώματα έχουν ειδικές χρωστικές από φυσικά ορυκτά που ενισχύουν την αντοχή της επιφάνειας των κουφωμάτων και μειώνουν τη θερμοκρασία τους.</p></div>
+        <div class="smallcol pad30"><p class="nname">Τι μειονεκτήματα έχουν τα κουφώματα pvc; Κιτρινίζουν έυκολα;</p>{% image "img/parathyra-pvc.jpg", "κιτρινίζουν τα κουφωματα pvc", 400, 267, "m20marg", "lazy" %}<p>Το κιτρίνιασμα των συνθετικών κουφωμάτων pvc αποτελεί μύθο. Το συνθετικό pvc από το οποίο κατασκευάζονται δεν πολυμερίζεται εύκολα και κρατάει για πολλά χρόνια τις αρχικές ιδιότητές του όπως η υφή και το χρώμα. Το κιτρίνιασμα που παρατηρείται σε παλαίοτερου τύπου κουφώματα pvc είναι το φυσικό φαινόμενο της γήρανσής τους. Στις μέρες μας βέβεαια και χρησιμοποιόντας τις σύνχρονες τεχνολογίες, οι εταιρείες παραγωγής κουφωμάτων pvc έχουν βελτιώσει σε μεγάλο βαθμό τις επιδόσεις τους και έχουν εξαλείψει εντελός το κιτρίνιασμα, ακόμα και στις πιο αντίξοες συνθήκες όπως καυσαέρια και ηλιοφάνεια. Επιπλέον οι περισσότερες βαφές είναι ειδικά επεξεργασμένες για να αντέχουν στο χρόνο.</p></div>
+        <div class="smallcol pad30"><p class="nname">Είναι εύκολη η αντικατάσταση των παλιών κουφωμάτων με τα νέα pvc;</p>{% image "img/allagi-koufomaton-pvc.jpg", "αντικατασταση κουφωματων pvc", 400, 267, "m20marg", "lazy" %}<p>Η εφαρμογή των κουφωμάτων Pvc δεν διαφέρει σε τίποτα από τις εγκαταστάσεις άλλων κουφωμάτων όπως του αλουμινίου ή των ξύλινων. Είναι πολύ σημαντικό πριν παραγγείλετε τα νέα σας κουφώματα να μετρήσετε καλά τις διαστάσεις των ανοιγμάτων όπου θα τοποθετηθούν. Εάν πάλι η αντικατάσταση των παλιών σας κουφωμάτων είναι κάτι που σας τρομάζει, μπορείτε να απευθυνθείτε στους ειδικούς. Στην PVCOUTLET® διαθέτουμε εξειδικευμένο συνεργείο το οποίο έρχεται στον χώρο σας και αντικαθιστά σε λίγες μόνο ώρες τα παλία σας κουφώματα με τα νέα ενεργειακά κουφώματα pvc. Εάν θέλετε μπορούμε παράλληλα να εγκαταστήσουμε ρολά και σίτες.</p></div>
+      </div>
+      <div class="row">
+        <div class="smallcol pad30"><p class="nname">Τι επίπεδα ηχομόνωσης προσφέρουν τα pvc κουφώματα;</p>{% image "img/pvc-parathyra-ihomonosi.jpg", "pvc κουφωματα ηχομονωση", 400, 267, "m20marg", "lazy" %}<p>Η ηχομόνωση του σπιτιού αλλά και του εργασιακού χώρου είναι πολύ σημαντικό ζήτημα καθώς οι θόρυβοι του περιβάλλοντος μπορούν να προκαλέσουν ψυχικές αρρυθμίες και άλλες παθήσεις. Τα κουφώματα pvc μειώνουν έως και 70% τους θρούβους του περιβάλλοντος και εγγυώνται έναν ήσυχο και ήρεμο χώρο.</p></div>
+        <div class="smallcol pad30"><p class="nname">Τι επίπεδα θερμομόνωσης προσφέρουν τα pvc κουφώματα;</p>{% image "img/koufomata-pvc-energiaka.jpg", "ενεργειακά κουφώματα pvc", 400, 267, "m20marg", "lazy" %}<p>Τα κουφώματα pvc προσφέρουν κορυφαία θερμομόνωση και μέγιστη εξοικονόμιση ενέργειας και χρημάτων. Η θερμομόνωση μποεί να φτάσει επίπεδα ακόμα και UF τιμή= 1.1 W/ (m2K). Τα περισσότερα κουφώματα διαθέτουν περιμετρικά λάστιχα για αξιόπιστη προστασία από τον αέρα και την υγρασία, διπλό επίπεδο λάστιχου (ενδιάμεσο λάστιχο) για δυνατότητα επιπρόσθετης θερμομόνωσης και ενεργειακά τζάμαι τεσσάρων εποχών.</p></div>
+        <div class="smallcol pad30"><p class="nname">Τι επίπεδα ασφαλείας προσφέρουν τα pvc κουφώματα;</p>{% image "img/koufomata-pvc-asfalia.jpg", "ασφαλεια κουφωματων pvc", 400, 267, "m20marg", "lazy" %}<p>Τα κουφώματα pvc παρέχουν ασφάλεια και προστασία από διάρρηξη μέχρι επιπέδου RC2. Τα περισσότερα pvc κουφώματα είναι ενισχυμένα απο χάλυβα και διαθέτουν εξαρτήματα ασφαλείας και ειδικούς μηχανισμούς. Για επιπλέον προστασία από ρολό βαρέους τύπου ή πτυσσόμενα κάγκελα ασφαλείας ενισχύει ακόμα περισσότερο την ασφάλειά σας.</p></div>
+      </div>
+    </div>
+  </div>
+  <div class="sepp"></div>
+
+  <p class="titlos3">Άρθρα απο το blog</p>
+  <div class="row">
+    <div class="column vugu"></div>
+    <div class="column whhi">
+      <div class="pvcdesc">
+        <p class="titlos3">Κουφώματα PVC ή Αλουμινίου;</p>
+        <p>Η στιγμή που πρέπει να επιλέξουμε κουφώματα για το σπίτι μας μπορεί να αποδειχθεί μία αρκετά κρίσιμη αγοραστική απόφαση.</p>
+        <p>Τα κουφώματα δίνουν υπεραξία στο χώρο μας και μας κάνουν να αισθανόμαστε προστατευμένοι από τις καιρικές συνθήκες και άλλους παράγοντες του περιβάλλοντος όπως θόρυβος του δρόμου.</p>
+        <p>Στην αγορά υπάρχουν κουφώματα με πολλά διαφορερικά χαρακτηριστικά όπως, ανοιγόμενα, επάλληλά ή και με ανάκλιση όμως αυτό που τα διαχωρίζει σε μεγάλο βαθμό μεταξύ τους είναι η ποιότητα απο την οποία είναι κατασκευασμένα.</p>
+        <p>Για πολλά χρόνια τα κουφώματα από αλουμίνο μονοπωλούσαν την Ελληνική αγορά καθώς η Ελλάδα παράγει το εν λογω υλικό σε μεγάλες ποσότητες. Τα τελευταία χρόνια όμως η παραγωγή κουφωμάτων από συνθετικό pvc έχει αρχήσει και ακμάζει καθώς συνθετικά κουφώματα έχουν πολλά πλεονεκτήματα.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="column whhi">
+      <p class="titlos3">ΣΥΝΘΕΤΙΚΑ ΚΟΥΦΩΜΑΤΑ PVC</p>
+      <p class="basii2">Αναλύοντας τα πλεονεκτήματα των συνθετικών κουφωμάτων pvc είναι δύσκολο να αποφασίσουμε πιο είναι το πιο δυνατό τους χαρακτηριστικό. Αρχικά το κόστος αγοράς τους είναι πολύ χαμηλότεροο απο τις υπόλοιπες εναλλακτικές κουφωμάτων οπότε ας ξεκινήσουμε από εκεί. Τα κουφώματα pvc συνδιάζουν υψηλά επίπεδα θερμομόνωσης και ηχομόνωσης έως και 74%, διατίθενται σε ευρεία γκάμα χρωμάτων και μπορείτε να επιλέξετε τον σχεδιασμό που ταιριάζει στις ανάγκες σας. Είναι αρκετά ανθεκτικά στις καταπονήσεις από τον ήλιο και τη ρύπανση του αέρα της πόλης και τα περισσότερα έρχονται με εγγύηση 12ετίας. Συνυπολογίζοντας τα παραπάνω, τα κουφώματα pvc όχι μόνο έχουν χαμηλές τιμές αγοράς αλλά λόγω των θερμομονωτικών τους ιδιοτήτων, σας εξοικονομούν χρήματα και από τα πάγια θέρμανσης / ψύξης κατα τη διάρκεια της ζωής τους. Τα χαμηλά έως ανύπαρκτα κόστη συντήρισης τους τα καθιστούν την πιο συμφέρουσα επιλογή κουφωμάτων σε σχέση ποιότητας και τιμής.</p>
+    </div>
+    <div class="column vugu2"></div>
+  </div>
+  <div class="sepp"></div>
+
+  <div class="containerpvc2">
+    <div class="containerpvc testo"><br/><div class="sepp"></div>
+      <p class="titlos3 dddar">Τα πλεονεκτήματα των κουφωμάτων PVC</p>
+      <p class="basii2" style="color:white;"><span class="nname" style="color:yellow;">ΠΡΟΣΟΧΗ!!</span> δεν είναι όλα τα pvc κουφώματα ίδια. Τα κουφώματα pvc της PVCOUTLET® αποτελούν εγγυημένα την καλύτερη λύση στα συνθετικά κουφώματα από pvc. Διαθέτουμε <span class="nname">εμπειρία και τεχνογνωσία 40 ετών</span> στα κουφώματα και είμαστε δίπλα σας να σας απαντήσουμε όλες τις απορίες. Το <span class="nname">εξειδικευμένο συνεργείο</span> μας αναλαμβάνει την τοποθέτηση των κουφωμάτων, ρολών και σίτας σε όλη την <span class="nname">Ελλάδα</span>. Τα κουφώματά μας εγγυούνται υψηλά ποσοστά ηχομόνωσης και θερμομόνωσης και πληρούν τα πιο αυστηρά παγκόσμια πρότυπα κατα την κατασκευή τους.</p>
+      <div class="row">
+        <div class="column"><ul class="biie"><li>► Ηχομόνωση έως 70%</li><li>► Θερμομόνωση έως 70%</li><li>► Εξοικονόμιση ενέργειας</li><li>► Εξοικονόμιση χρημάτων</li><li>► Υψηλή αξία ποιότητας τιμής</li></ul></div>
+        <div class="column"><ul class="biie"><li>► Ανθεκτικότητα στο χρόνο</li><li>► Δεν κιτρινίζουν στον ήλιο</li><li>► Ευκολία στη συντήριση</li><li>► Ευκολία στο καθάρισμα</li><li>► 10 χρόνια εγγύηση</li></ul></div>
+        <div class="column"><ul class="biie"><li>► Κρύσταλλα τεσσάρων εποχών</li><li>► Ακουστικά χερούλια</li><li>► Μοντέρνα στυλ</li><li>► Αντιδιαρρικτική προστασία</li><li>► Πύροι ασφαλείας</li></ul></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="sepp"></div>
+  <div class="containerpvc3">
+    <div class="containerpvc testo">
+      <div class="sepp"></div>
+      <p class="titlos2">Όλοι οι πελάτες μας βρήκαν τα κουφώματα που τους ταιριάζουν!</p>
+      {% include "testimonials-block.njk" %}
+    </div>
+  </div>
+
   <p class="basii">Καλέστε για <strong>προσφορά μπαλκονόπορτας pvc</strong>: <a href="tel:00302117259236">{{ site.phoneDisplay }}</a> ή <a href="/epikoinonia/">επικοινωνία</a>.</p>
   <div class="sepp"></div>
 </div>
