--- a/style.css
+++ b/style.css
@@ -198,6 +198,51 @@ p.titlos3, .titlos3 {
 .topnav button.icon {
   padding: 14px 16px;
 }
+.topnav button.icon .hamburger,
+.topnav button.icon .hamburger::before,
+.topnav button.icon .hamburger::after {
+  display: block;
+  width: 22px;
+  height: 2px;
+  background-color: #f2f2f2;
+  border-radius: 2px;
+  transition: transform 0.2s ease, opacity 0.2s ease;
+}
+.topnav button.icon .hamburger {
+  position: relative;
+}
+.topnav button.icon .hamburger::before,
+.topnav button.icon .hamburger::after {
+  content: "";
+  position: absolute;
+  left: 0;
+}
+.topnav button.icon .hamburger::before {
+  top: -7px;
+}
+.topnav button.icon .hamburger::after {
+  top: 7px;
+}
+.topnav.responsive button.icon .hamburger {
+  background-color: transparent;
+}
+.topnav.responsive button.icon .hamburger::before {
+  transform: translateY(7px) rotate(45deg);
+}
+.topnav.responsive button.icon .hamburger::after {
+  transform: translateY(-7px) rotate(-45deg);
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
 
 /* ==========================================================================
    HERO / SLIDER
@@ -634,21 +679,43 @@ p.dddar {
    RESPONSIVE - TABLET & MOBILE
    ========================================================================== */
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
-    display: none;
+  .topnav {
+    display: block;
+    text-align: left;
+    position: relative;
   }
 
-  .topnav a.icon,
+  .topnav a {
+    display: none;
+    width: 100%;
+    border-top: 1px solid rgba(255, 255, 255, 0.18);
+    background-color: #262364;
+  }
+
   .topnav button.icon {
-    float: right;
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    min-width: 64px;
+    min-height: 56px;
+    float: none;
+    background-color: #00aeec;
+    border-left: 1px solid rgba(255, 255, 255, 0.25);
+  }
+
+  .topnav button.icon .hamburger,
+  .topnav button.icon .hamburger::before,
+  .topnav button.icon .hamburger::after {
+    width: 28px;
+    height: 3px;
+    background-color: #ffffff;
   }
 
   .topnav.responsive {
     position: relative;
   }
 
-  .topnav.responsive a.icon,
   .topnav.responsive button.icon {
     position: absolute;
     right: 0;
@@ -656,13 +723,34 @@ p.dddar {
   }
 
   .topnav.responsive a {
-    float: none;
     display: block;
+    float: none;
     text-align: left;
+    padding-right: 64px;
+    line-height: 1.25;
   }
 
   .column {
     margin: 15px;
+  }
+
+  .mainsl {
+    min-height: 420px;
+  }
+
+  #eikona {
+    height: 420px;
+  }
+
+  .mainsl .hero-bg {
+    object-position: 60% 32%;
+  }
+
+  .centeredpvc {
+    width: 92%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
 
   p.titlos2,
@@ -687,8 +775,30 @@ p.dddar {
   }
 
   #tilak {
-    font-size: 40px;
+    font-size: 34px;
+    line-height: 1.2;
     text-align: left;
+  }
+
+  .intro {
+    width: 92%;
+    padding-top: 30px;
+    line-height: 30px;
+    font-size: 1.3rem;
+  }
+
+  p,
+  .basii {
+    font-size: 16px;
+    line-height: 27px;
+  }
+
+  .centroio {
+    padding: 0 18px;
+  }
+
+  .wwt {
+    margin-bottom: 24px;
   }
 
   .diaff {
